Updating after review
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/cluster-deployment/configuration/k3s.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/configuration/k3s.adoc
@@ -102,7 +102,7 @@ The default xref:security/psact.adoc[pod security admission configuration templa
 
 ===== Encrypt Secrets
 
-Option to enable or disable secrets encryption. When enabled, secrets will be encrypted using a AES-CBC key. If disabled, any previously secrets will not be readable until encryption is enabled again. Refer to the https://documentation.suse.com/cloudnative/k3s/latest/en/security/secrets-encryption.html[K3s documentation] for details.
+Option to enable or disable secrets encryption. When enabled, secrets are encrypted using a AES-CBC key. If disabled, previously encrypted secrets are not readable until encryption is enabled again. Refer to the https://documentation.suse.com/cloudnative/k3s/latest/en/security/secrets-encryption.html[K3s documentation] for details.
 
 ===== Project Network Isolation
 
