--- a/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
@@ -8,7 +8,7 @@ endif::[]
 
 When you create a custom cluster, Rancher can use RKE2/K3s to create a Kubernetes cluster in on-prem bare-metal servers, on-prem virtual machines, or in any node hosted by an infrastructure provider.
 
-To use this option, you need access to the servers that will be part of your Kubernetes cluster. Provision each server according to thexref:cluster-deployment/node-requirements.adoc[requirements]. Then, run the command provided in the Rancher UI on each server to convert it into a Kubernetes node.
+To use this option, you need access to the servers that will be part of your Kubernetes cluster. Provision each server according to the xref:cluster-deployment/node-requirements.adoc[requirements]. Then, run the command provided in the Rancher UI on each server to convert it into a Kubernetes node.
 
 This section describes how to set up a custom cluster.
 
@@ -39,9 +39,9 @@ Provision the host according to the xref:cluster-deployment/node-requirements.ad
 ====
 For an IPv6-only cluster, ensure that your operating system correctly configures the `/etc/hosts` file.
 
-```
+----
 ::1       localhost
-```
+----
 ====
 
 === 2. Create the Custom Cluster
@@ -70,7 +70,7 @@ To learn more about using Windows nodes as Kubernetes workers, see xref:cluster-
 If you plan to dedicate bare-metal servers to each role, you must provision a bare-metal server for each role (i.e., provision multiple bare-metal servers).
 ====
 +
-. *Optional:* Click *Show Advanced* to configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node
+. *Optional:* Click *Show Advanced* to configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
 +
 [NOTE]
 ====
