--- a/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
@@ -253,9 +253,10 @@ For each Linux worker node added into the cluster, the following taints will be 
 
 In this section, we run a command to register the Windows worker node to the cluster.
 
-:::note
+[NOTE]
+====
 The registration command to add the Windows workers only appears after the cluster is running with Linux etcd, control plane, and worker nodes.
-:::
+====
 
 . After cluster creation, navigate to the *Registration* tab.
 . In *Step 1* under the *Node Role* section, select *Worker*.
