--- a/versions/v2.13/modules/en/pages/cluster-deployment/dual-stack.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/dual-stack.adoc
@@ -20,7 +20,7 @@ When you install Rancher on an *IPv6-only cluster*, it can communicate externall
 
 * IPv6-only clusters
 * Dual-stack clusters  
-  **(IPv4-only downstream clusters are not possible in this case)**
+  __(IPv4-only downstream clusters are not possible in this case)__
 
 When you install Rancher on a *dual-stack cluster*, it can communicate over both IPv4 and IPv6, and can therefore provision:
 
@@ -98,8 +98,8 @@ Cluster nodes must meet the requirements listed in the xref:cluster/deployment/n
 
 Machine pool configuration guides:
 
-* xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[Amazon EC2]
-* xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[DigitalOcean]
+* xref:cluster-deployment/infra-providers/aws/aws.adoc[Amazon EC2]
+* xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[DigitalOcean]
 
 === Provisioning Custom Clusters
 
@@ -122,5 +122,5 @@ Infrastructure requirements are the same as above for node-driver clusters.
 
 GitHub.com does *not* support IPv6. As a result:
 
-* Any application repositories ( `ClusterRepo.catalog.cattle.io/v1` CR) hosted on GitHub.com will *not be reachable* from IPv6-only clusters.
-* Similarly, any *non-builtin node drivers* hosted on GitHub.com will also *not be accessible* in IPv6-only environments.
+* Any application repositories ( `ClusterRepo.catalog.cattle.io/v1` CR) hosted on GitHub.com are *not reachable* from IPv6-only clusters.
+* Similarly, any *non-builtin node drivers* hosted on GitHub.com are also *not accessible* in IPv6-only environments.
