--- a/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -19,7 +19,7 @@ Then you create an EC2 cluster in Rancher, and when configuring the new cluster,
  ** <<_example_iam_policy,Example IAM Policy>>
  ** <<_example_iam_policy_with_passrole,Example IAM Policy with PassRole>> (needed if you want to use xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider] or want to pass an IAM Profile to an instance)
  ** <<_example_iam_policy_to_allow_encrypted_ebs_volumes,Example IAM Policy to allow encrypted EBS volumes>>
-* *IAM Policy added as Permission* to the user. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_change-permissions.html#users_change_permissions-add-console[Amazon Documentation: Adding Permissions to a User (Console)] how to attach it to an user.
+* *IAM Policy added as Permission* to the user. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_change-permissions.html#users_change_permissions-add-console[Amazon Documentation: Adding Permissions to a User (Console)] how to attach it to a user.
 * *IPv4-only or IPv6-only or dual-stack subnet and/or VPC* where nodes can be provisioned and assigned IPv4 and/or IPv6 addresses. See https://docs.aws.amazon.com/vpc/latest/userguide/vpc-migrate-ipv6.html[Amazon Documentation: IPv6 support for your VPC].
 
 == Creating an EC2 Cluster
