--- a/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
@@ -87,7 +87,7 @@ Specify how many IPv6 addresses to assign to the instance’s network interface.
 
 === IPv6 Address Only
 
-Enable this option if the instance should use IPv6 exclusively. IPv6-only VPCs or subnets require this. When enabled, the instance will have IPv6 as its sole address, and the IPv6 Address Count must be greater than zero.
+Enable this option if the instance should use IPv6 exclusively. IPv6-only VPCs or subnets require this. When enabled, the instance has IPv6 as its sole address, and the IPv6 Address Count must be greater than zero.
 
 === HTTP Protocol IPv6
 
