--- a/versions/v2.13/modules/zh/pages/api/workflows/users.adoc
+++ b/versions/v2.13/modules/zh/pages/api/workflows/users.adoc
@@ -28,13 +28,13 @@ kubectl create -f -<<EOF
 apiVersion: management.cattle.io/v3
 kind: User
 metadata:
- name: testuser     
-displayName: "Test User"             
+  name: testuser
+displayName: "Test User"
 username: "testuser"
 EOF
 ====
 
-The user's password must be provided in a `Secret` object within the `cattle-local-user-passwords` namespace. The Rancher webhook will automatically hash the password and update the `Secret`.
+The user's password must be provided in a `Secret` object within the `cattle-local-user-passwords` namespace. The Rancher webhook automatically hashes the password and updates the `Secret`.
 
 [IMPORTANT]
 ====
@@ -47,11 +47,11 @@ kubectl create -f -<<EOF
 apiVersion: v1
 kind: Secret
 metadata:
- name: testuser
- namespace: cattle-local-user-passwords
+  name: testuser
+  namespace: cattle-local-user-passwords
 type: Opaque
 stringData:
- password: Pass1234567!
+  password: Pass1234567!
 EOF
 ====
 
@@ -79,9 +79,10 @@ type: Opaque
 ====
 
 == Updating User's Password
+
 To change a user's password, use the `PasswordChangeRequest` resource, which handles secure password updates.
 
-[source,yaml]
+[source,shell]
 ====
 kubectl create  -f -<<EOF
 apiVersion: ext.cattle.io/v1
@@ -118,7 +119,7 @@ testuser       3m54s
 
 == Deleting a User
 
-Deleting a user will automatically delete the corresponding password `Secret`.
+Deleting a user automatically deletes the corresponding password `Secret`.
 
 [source,shell]
 ====
