Initial structure and pages for v2.12.5 release note for en/zh
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.12/modules/en/pages/release-notes.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes.adoc
@@ -10,8 +10,8 @@ endif::[]
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.12.5
+| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
 | N/A
 | &#10003;
 | N/A
@@ -21,6 +21,12 @@ endif::[]
 
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
+
+| v2.12.4
+| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-4/[View]
+| &#10003;
+| N/A
 
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
