--- a/versions/v2.12/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes.adoc
@@ -8,17 +8,23 @@
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.12.5
+| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
 | N/A
 | &#10003;
-| &cross;
+| N/A
 |===
 
 == 旧版本
 
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
+
+| v2.12.4
+| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-4/[View]
+| &#10003;
+| N/A
 
 | v2.12.3
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
