--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -1,4 +1,5 @@
-* xref:release-notes.adoc[]
+* xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.12.5.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
