Adding link to IPv4/IPv6 Prime documentation from product docs page.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/cluster-deployment/dual-stack.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/dual-stack.adoc
@@ -5,8 +5,7 @@ endif::[]
 :revdate: 2025-12-10
 :page-revdate: {revdate}
 
-Kubernetes supports IPv4-only, IPv6-only, and dual-stack networking configurations.
-For more details, refer to the official https://kubernetes.io/docs/concepts/services-networking/dual-stack/[Kubernetes documentation].
+Kubernetes supports IPv4-only, IPv6-only, and dual-stack networking configurations. For more details, refer to the official https://kubernetes.io/docs/concepts/services-networking/dual-stack/[Kubernetes documentation].
 
 == Installing Rancher on IPv6-Only or Dual-Stack Clusters
 
@@ -116,7 +115,12 @@ To provision on your own nodes, follow the instructions in xref:cluster-deployme
 
 Infrastructure requirements are the same as above for node-driver clusters.
 
-== Other Limitations
+== Limitations
+
+[IMPORTANT]
+====
+Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/dual-stack.html[IPv4/IPv6 Dual-Stack Prime documentation] for additional limitations regarding Prime-only IPv6 URL support.
+====
 
 === GitHub.com
 
