--- a/versions/v2.13/modules/zh/pages/cluster-deployment/dual-stack.adoc
+++ b/versions/v2.13/modules/zh/pages/cluster-deployment/dual-stack.adoc
@@ -116,7 +116,12 @@ To provision on your own nodes, follow the instructions in xref:cluster-deployme
 
 Infrastructure requirements are the same as above for node-driver clusters.
 
-== Other Limitations
+== Limitations
+
+[IMPORTANT]
+====
+Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/dual-stack.html[IPv4/IPv6 Dual-Stack Prime documentation] for additional limitations regarding Prime-only IPv6 URL support.
+====
 
 === GitHub.com
 
