--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
@@ -25,9 +25,7 @@ https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observabilit
 endif::[]
 ====
 
-Rancher v2.13.1 is the latest patch release of Rancher. This is a Community and Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
-
-For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes].
+Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
 
 == Rancher General
 
@@ -37,6 +35,7 @@ For more information on new features in the general minor release see the https:
 
 === Behavior Changes
 
+* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
 * Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
 
 === Major Bug Fixes
@@ -217,8 +216,6 @@ endif::[]
 
 == Versions
 
-Please refer to the https://github.com/rancher/rancher#latest-release[README] for the latest and stable Rancher versions.
-
 == Images
 
 * rancher/rancher:v2.13.1
@@ -251,7 +248,7 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 * Not all cluster tools can be installed on a hardened cluster.
 // no issue number available
 
-* **Rancher v2.13.0:**
+* *Rancher v2.13.0:*
 ** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See [#52154](https://github.com/rancher/rancher/issues/52154).
 * *Rancher v2.8.1:*
 ** When you  attempt to register a new etcd/controlplane node in a CAPR-managed cluster after a failed etcd snapshot restoration, the node can become stuck in a perpetual paused state, displaying the error message `[ERROR]  000 received while downloading Rancher connection information. Sleeping for 5 seconds and trying again`. As a workaround, you can unpause the cluster by running `kubectl edit clusters.cluster clustername -n fleet-default` and set `spec.unpaused` to `false`.  See https://github.com/rancher/rancher/issues/43735[#43735].
@@ -323,7 +320,7 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 * When migrating to a cluster with the Rancher Backup feature, the server-url cannot be changed to a different location. It must continue to use the same URL.
 // no issue number
 
-* **Rancher v2.13.0:**
+* *Rancher v2.13.0:*
 ** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See [#844](https://github.com/rancher/backup-restore-operator/issues/844). To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this [Knowledge Base article](https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US).
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve *Active* status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
