--- a/versions/v2.12/modules/zh/pages/release-notes/v2.12.5.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes/v2.12.5.adoc
@@ -111,8 +111,6 @@ endif::[]
 
 == Versions
 
-Please refer to the [README](https://github.com/rancher/rancher#latest-release) for the latest and stable Rancher versions.
-
 == Images
 
 * rancher/rancher:v2.12.5
@@ -167,33 +165,33 @@ In Rancher v2.6.0 and later, in the **Apps & Marketplace** UI, many Rancher Helm
   InfrastructureMachine objects are generated automatically by Rancher from other configuration objects.
   The following validations were changed in this CRD schema:
   * `spec.common.cloudCredentialSecretName`
-    * Value must be 317 characters long or less (`<namespace>:<secretname>`). 
+  ** Value must be 317 characters long or less (`<namespace>:<secretname>`). 
   * `spec.common.labels`
-    * Label values are no longer allowed to take a `null` value.
+  ** Label values are no longer allowed to take a `null` value.
   * `spec.common.taints`, in each taint object:
-    * Fields `effect` and `key` are now required.
-    * Field `timeAdded` is now required to be in the `date-time` format.
-    * All fields are no longer allowed to take a `null` value.
+  ** Fields `effect` and `key` are now required.
+  ** Field `timeAdded` is now required to be in the `date-time` format.
+  ** All fields are no longer allowed to take a `null` value.
   * `status.addresses`, in each address object:
-    * Fields `address` and `type` are now required and are no longer allowed to take a `null` value.
-    * Field `type` must take one of the following values: `Hostname`, `ExternalIP`, `InternalIP`, `ExternalDNS` or `InternalDNS`.
-    * Field `address` must be between 1 and 256 characters long.
+  ** Fields `address` and `type` are now required and are no longer allowed to take a `null` value.
+  ** Field `type` must take one of the following values: `Hostname`, `ExternalIP`, `InternalIP`, `ExternalDNS` or `InternalDNS`.
+  ** Field `address` must be between 1 and 256 characters long.
   * `status.conditions`, in each condition object:
-    * Fields `status` and `type` are now required.
-    * No fields are allowed to take a `null` value anymore.
+  ** Fields `status` and `type` are now required.
+  ** No fields are allowed to take a `null` value anymore.
   * `status`
-    * No fields are allowed to take a `null` value anymore.
+  ** No fields are allowed to take a `null` value anymore.
   **InfrastructureMachineTemplate CRDs**
   These are the CAPI InfrastructureMachineTemplate CRDs defined for the Rancher CAPI infrastructure provider. They are dynamically generated and are named `<name>machinetemplates.rke-machine.cattle.io`, where `<name>` is derived from the node driver used to provision machines with a given infrastructure provider. Each active node driver has an associated InfrastructureMachineTemplate CRD.
   InfrastructureMachineTemplate objects are generated automatically by Rancher from other configuration objects.
   * `spec.template.spec.common.cloudCredentialSecretName`
-    * Value must be 317 characters long or less (`<namespace>:<secretname>`).
+  ** Value must be 317 characters long or less (`<namespace>:<secretname>`).
   * `spec.template.spec.common.labels`
-    * Label values are no longer allowed to take a `null` value.
+  ** Label values are no longer allowed to take a `null` value.
   * `spec.template.spec.common.taints`, in each taint object:
-    * Fields `effect` and `key` are now required.
-    * Field `timeAdded` is now required to be in the `date-time` format.
-    * No fields are allowed to take a `null` value anymore.
+  ** Fields `effect` and `key` are now required.
+  ** Field `timeAdded` is now required to be in the `date-time` format.
+  ** No fields are allowed to take a `null` value anymore.
     
   See https://github.com/rancher/rancher/issues/49402[#49402] for more information.
 
