--- a/versions/v2.11/modules/en/pages/release-notes.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes.adoc
@@ -8,8 +8,8 @@
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
-| v2.11.8
-| https://github.com/rancher/rancher/releases/tag/v2.11.8[View]
+| v2.11.9
+| xref:release-notes/v2.11.9.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.11.9[GitHub Release]
 | N/A
 | &#10003;
 | N/A
@@ -19,6 +19,12 @@
 
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
+
+| v2.11.8
+| https://github.com/rancher/rancher/releases/tag/v2.11.8[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-11-8/[View]
+| &#10003;
+| N/A
 
 | v2.11.7
 | https://github.com/rancher/rancher/releases/tag/v2.11.7[View]
