--- a/versions/v2.11/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.11/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -1,6 +1,6 @@
 = 将 {rancher-product-name} 迁移到新集群
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2025-12-09
 :page-revdate: {revdate}
 
 如果你要将 Rancher 迁移到一个新的 Kubernetes 集群，先不要在新集群上安装 Rancher。这是因为如果将 Rancher 还原到已安装 Rancher 的新集群，可能会导致问题。
@@ -198,3 +198,25 @@ After migration completes, update your DNS records and any load balancers, so th
 
 Full instructions on how to redirect traffic to the migrated cluster differ based on your specific environment. Refer to your hosting provider's documentation for more details.
 
+== 6. Scale Down the Original Rancher Instance
+
+After redirecting traffic to the new Rancher environment, *scale the original Rancher instance to 0 replicas* so it no longer contacts your managed clusters.
+
+Leaving the old server up can cause agents to keep contacting the original `server-url`, which often leaves clusters stuck in *Updating* in the new environment.
+
+[,bash]
+----
+kubectl scale deployment rancher -n cattle-system --replicas=0
+----
+
+[NOTE]
+====
+If you wish to keep the original Rancher environment running, you can also restart the `cattle-cluster-agent` pods on each cluster connected to your Rancher environment.
+
+[,bash]
+----
+kubectl rollout restart deployment cattle-cluster-agent -n cattle-system
+----
+
+This triggers a rolling restart of the agent so it re-establishes the connection to the new Rancher environment.
+====
