--- a/versions/v2.11/modules/en/pages/release-notes/v2.11.9.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes/v2.11.9.adoc
@@ -1,35 +1,52 @@
 = Release v2.11.9
+ifeval::["{build-type}" != "srfa"]
+:page-languages: [en, zh]
+endif::[]
+:revdate: 2025-12-16
+:page-revdate: {revdate}
 
-> [!CAUTION]
-> **Important:** If you are using Active Directory Federation Service (AD FS) upgrading to Rancher v2.10.1 or later may cause issues with authentication caused by the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata, that requires manual intervention. This can be corrected by either trying to update Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...) or by directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate). For more information see [#48655](https://github.com/rancher/rancher/issues/48655).
-> **Important:** Rancher Kubernetes Engine (RKE/RKE1) has reached end of life as of **July 31, 2025**. Rancher versions 2.12.0 and later no longer support provisioning or managing downstream RKE1 clusters. We recommend replatforming RKE1 clusters to RKE2 to ensure continued support and security updates. Learn more about the transition [here](https://www.suse.com/support/kb/doc/?id=000021518).
-> **Important:** [Rancher-Istio](https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/observability/istio/istio.html) is now deprecated in Rancher v2.12.0; turn to the [SUSE Application Collection](https://apps.rancher.io) build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in [this announcement](https://forums.suse.com/t/deprecation-of-rancher-istio/45043).
-> **Important:** Review the Install/Upgrade Notes before upgrading to any Rancher version.
-Rancher v2.11.9 is the latest patch release of Rancher v2.11. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the [Rancher Prime Platform](https://www.rancher.com/products/rancher-platform).
+[IMPORTANT]
+====
+If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. They can be corrected by either of two methods:
+* Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...)
+* Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
+For more information see https://github.com/rancher/rancher/issues/48655[#48655].
+====
 
-For more information on new features in the general minor release see the [v2.11.0 release notes](https://github.com/rancher/rancher/releases/tag/v2.11.0).
+For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.11.0[v2.11.0 release notes].
 
-## Changes Since v2.11.8
+== Changes Since v2.11.8
 
 See the full list of [changes](https://github.com/rancher/rancher/compare/v2.11.8...v2.11.9).
 
-# Install/Upgrade Notes
+== Install/Upgrade Notes
 
-> - If you're installing Rancher for the first time, your environment must fulfill the [installation requirements](https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/requirements/requirements.html).
-## Changes in Image Artifacts
+ifeval::["{build-type}" == "community"]
+If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.11/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
+endif::[]
+ifeval::["{build-type}" == "product"]
+If you're installing Rancher for the first time, your environment must fulfill the https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/requirements/requirements.html[installation requirements].
+endif::[]
+
+== Changes in Image Artifacts
 
 Image artifact digests were renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up until this change, separate image digests files for each operating system and architecture have been maintained for compatibility reasons. With this change, only one file for each operating system is to be provided:
-- The `rancher-images-digests-linux-amd64.txt` and `rancher-images-digests-linux-arm64.txt` files are to be renamed to `rancher-images-digests-linux.txt`.
-- The `rancher-images-digests-windows-ltsc2019.txt` and `rancher-images-digests-windows-ltsc2022.txt` files are to be renamed to `rancher-images-digests-windows.txt`.
+* The `rancher-images-digests-linux-amd64.txt` and `rancher-images-digests-linux-arm64.txt` files are to be renamed to `rancher-images-digests-linux.txt`.
+* The `rancher-images-digests-windows-ltsc2019.txt` and `rancher-images-digests-windows-ltsc2022.txt` files are to be renamed to `rancher-images-digests-windows.txt`.
 
-# Upgrade Requirements
+== Upgrade Requirements
 
-- **Creating backups:** [Create a backup](https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/rancher-admin/back-up-restore-and-disaster-recovery/back-up.html) before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
-- **CNI requirements:**
-  - For Kubernetes v1.19 and later, disable firewalld as it's incompatible with various CNI plugins. See [#28840](https://github.com/rancher/rancher/issues/28840).
-  - When upgrading or installing a Linux distribution that uses nf_tables as the backend packet filter, such as SLES 15, RHEL 8, Ubuntu 20.10, Debian 10, or later, upgrade to RKE v1.19.2 or later to get Flannel v0.13.0. Flannel v0.13.0 supports nf_tables. See Flannel [#1317](https://github.com/flannel-io/flannel/issues/1317).
-- **Requirements for air-gapped environments:**
-  - When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the [documentation](https://documentation.suse.com/en-us/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html) and  issue [#2725](https://github.com/rancher/docs/issues/2725#issuecomment-702454584).
+ifeval::["{build-type}" == "community"]
+* *Creating backups:* https://ranchermanager.docs.rancher.com/v2.11/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
+endif::[]
+ifeval::["{build-type}" == "product"]
+* *Creating backups:* https://documentation.suse.com/cloudnative/rancher-manager/v2.11/en/rancher-admin/back-up-restore-and-disaster-recovery/back-up.html[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
+endif::[]
+* *CNI requirements:*
+** For Kubernetes v1.19 and later, disable firewalld as it's incompatible with various CNI plugins. See https://github.com/rancher/rancher/issues/28840[#28840].
+** When upgrading or installing a Linux distribution that uses nf_tables as the backend packet filter, such as SLES 15, RHEL 8, Ubuntu 20.10, Debian 10, or later, upgrade to RKE v1.19.2 or later to get Flannel v0.13.0. Flannel v0.13.0 supports nf_tables. See Flannel https://github.com/flannel-io/flannel/issues/1317[#1317].
+* *Requirements for air-gapped environments:*
+** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the [documentation](https://documentation.suse.com/en-us/cloudnative/rancher-manager/v2.11/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html) and  issue [#2725](https://github.com/rancher/docs/issues/2725#issuecomment-702454584).
   - When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the [K3s documentation](https://docs.k3s.io/installation/private-registry). If the registry has certificates, then you'll also need to supply those. See [#28969](https://github.com/rancher/rancher/issues/28969#issuecomment-694474229).
 
 # Versions
