--- a/versions/v2.13/modules/en/pages/api/reference.adoc
+++ b/versions/v2.13/modules/en/pages/api/reference.adoc
@@ -2,8 +2,9 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-17
 :page-revdate: {revdate}
+:rancher-version: v2.13
 :page-role: -toc
 
 [NOTE]
@@ -11,12 +12,13 @@ endif::[]
 At this time, not all Rancher resources are available through the Rancher Kubernetes API.
 ====
 
+[subs="attributes"]
 ++++
 <div class="api-doc">
     <redoc id='redoc-container'></redoc>
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
     <script>
-        Redoc.init('../_attachments/swagger-v2.12.json',
+        Redoc.init('../_attachments/swagger-{rancher-version}.json',
         {scrollYOffset: '.toolbar'},
         document.getElementById('redoc-container'))
     </script>
