Revert RKE1 updates
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.11/modules/en/pages/release-notes/v2.11.9.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes/v2.11.9.adoc
@@ -64,19 +64,19 @@ endif::[]
 === Tools
 
 * CLI - https://github.com/rancher/cli/releases/tag/v2.11.9[v2.11.9]
-* RKE - https://github.com/rancher/rke/releases/tag/v1.8.9[v1.8.9]
+* RKE - https://github.com/rancher/rke/releases/tag/v1.8.5[v1.8.5]
 
 === Kubernetes Versions for RKE
 
-- v1.32.10 (Default)
-- v1.31.14
-- v1.30.14
+* v1.32.6 (Default)
+* v1.31.10
+* v1.30.14
 
 === Kubernetes Versions for RKE2/K3s
 
-- v1.32.10 (Default)
-- v1.31.14
-- v1.30.14
+* v1.32.10 (Default)
+* v1.31.14
+* v1.30.14
 
 === Rancher Helm Chart Versions
 
