--- a/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
@@ -73,4 +73,9 @@ After a cluster is created with Rancher, a cluster administrator can manage clus
 
 The following table summarizes the options and settings available for each cluster type:
 
+ifeval::["{build-type}" != "srfa"]
 include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+include::shared:ROOT:partial$en/cluster-capabilities-updated-table-srfa.adoc[]
+endif::[]
