--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
@@ -18,7 +18,12 @@ This section assumes a basic familiarity with Docker and Kubernetes. For a brief
 
 After clusters have been xref:cluster-deployment/cluster-deployment.adoc[provisioned into Rancher], xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_cluster_roles[cluster owners] will need to manage these clusters. There are many different options of how to manage your cluster.
 
+ifeval::["{build-type}" != "srfa"]
 include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+include::shared:ROOT:partial$en/cluster-capabilities-updated-table-srfa.adoc[]
+endif::[]
 
 == Configuring Tools
 
