--- a/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/authn-and-authz.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/authn-and-authz.adoc
@@ -152,9 +152,11 @@ When you disable an auth provider, Rancher deletes all resources associated with
 
 As this operation may lead to a loss of many resources, you may want to add a safeguard on the provider. To ensure that this cleanup process doesn't run when the auth provider is disabled, add a special annotation to the corresponding auth config.
 
+ifeval::["{build-type}" != "srfa"]
 For example, to add a safeguard to the Azure AD provider, annotate the `azuread` authconfig object:
 
 `kubectl annotate --overwrite authconfig azuread management.cattle.io/auth-provider-cleanup='user-locked'`
+endif::[]
 
 Rancher won't perform cleanup until you set the annotation to `unlocked`.
 
