Removing GH link to release notes
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.11/modules/en/pages/release-notes.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes.adoc
@@ -9,7 +9,7 @@
 | Version | Release Notes | Support Matrix | Prime | Community
 
 | v2.11.9
-| xref:release-notes/v2.11.9.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.11.9[GitHub Release]
+| xref:release-notes/v2.11.9.adoc[View]
 | N/A
 | &#10003;
 | N/A
