--- a/versions/v2.11/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.11/modules/zh/pages/release-notes.adoc
@@ -9,7 +9,7 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.11.9
-| xref:release-notes/v2.11.9.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.11.9[GitHub Release]
+| xref:release-notes/v2.11.9.adoc[View]
 | N/A
 | &#10003;
 | N/A
