Removing GH link to release notes
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.12/modules/en/pages/release-notes.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes.adoc
@@ -11,7 +11,7 @@ endif::[]
 | Version | Release Notes | Support Matrix | Prime | Community
 
 | v2.12.5
-| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
+| xref:release-notes/v2.12.5.adoc[View]
 | N/A
 | &#10003;
 | N/A
