--- a/versions/v2.12/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes.adoc
@@ -9,7 +9,7 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.12.5
-| xref:release-notes/v2.12.5.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.12.5[GitHub Release]
+| xref:release-notes/v2.12.5.adoc[View]
 | N/A
 | &#10003;
 | N/A
