--- a/versions/v2.13/modules/en/pages/release-notes.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes.adoc
@@ -11,7 +11,7 @@ endif::[]
 | Version | Release Notes | Support Matrix | Prime | Community
 
 | v2.13.1
-| xref:release-notes/v2.13.1.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.1[GitHub Release]
+| xref:release-notes/v2.13.1.adoc[View]
 | N/A
 | &#10003;
 | &#10003;
