--- a/versions/v2.13/modules/en/pages/about-rancher/overview.adoc
+++ b/versions/v2.13/modules/en/pages/about-rancher/overview.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-18
 :page-revdate: {revdate}
 
 Rancher is a container management platform built for organizations that deploy containers in production. Rancher makes it easy to run Kubernetes everywhere, meet IT requirements, and empower DevOps teams.
@@ -73,4 +73,9 @@ After a cluster is created with Rancher, a cluster administrator can manage clus
 
 The following table summarizes the options and settings available for each cluster type:
 
+ifeval::["{build-type}" != "srfa"]
 include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+include::shared:ROOT:partial$en/cluster-capabilities-updated-table-srfa.adoc[]
+endif::[]
