--- a/versions/v2.13/modules/en/pages/faq/general-faq.adoc
+++ b/versions/v2.13/modules/en/pages/faq/general-faq.adoc
@@ -2,13 +2,14 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-18
 :page-revdate: {revdate}
 
 This FAQ is a work in progress designed to answer the questions most frequently asked about Rancher v2.x.
 
 See the xref:faq/technical-items.adoc[Technical FAQ] for frequently asked technical questions.
 
+ifeval::["{build-type}" != "srfa"]
 == Is it possible to manage Azure Kubernetes Services with Rancher v2.x?
 
 Yes. See our xref:cluster-admin/manage-clusters/manage-clusters.adoc[Cluster Administration] guide for what Rancher features are available on AKS, as well as our xref:installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc[documentation on AKS].
@@ -16,6 +17,7 @@ Yes. See our xref:cluster-admin/manage-clusters/manage-clusters.adoc[Cluster Adm
 == Does Rancher support Windows?
 
 Yes. Rancher supports Windows Server 1809 containers. For details on how to set up a cluster with Windows worker nodes, refer to the section on xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[configuring custom clusters for Windows.]
+endif::[]
 
 == Does Rancher support Istio?
 
