--- a/versions/v2.13/modules/en/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/cluster-deployment.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-18
 :page-revdate: {revdate}
 :description: Provisioning Kubernetes Clusters
 
@@ -16,7 +16,12 @@ For a conceptual overview of how the Rancher server provisions clusters and what
 
 The following table summarizes the options and settings available for each cluster type:
 
+ifeval::["{build-type}" != "srfa"]
 include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+include::shared:ROOT:partial$en/cluster-capabilities-updated-table-srfa.adoc[]
+endif::[]
 
 == Setting up Clusters in a Hosted Kubernetes Provider
 
