Use {page-component-version} attribute to refer to swagger json

--- a/versions/v2.13/modules/en/pages/api/reference.adoc
+++ b/versions/v2.13/modules/en/pages/api/reference.adoc
@@ -2,9 +2,8 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-17
+:revdate: 2025-12-18
 :page-revdate: {revdate}
-:rancher-version: v2.13
 :page-role: -toc
 
 [NOTE]
@@ -18,7 +17,7 @@ At this time, not all Rancher resources are available through the Rancher Kubern
     <redoc id='redoc-container'></redoc>
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
     <script>
-        Redoc.init('../_attachments/swagger-{rancher-version}.json',
+        Redoc.init('../_attachments/swagger-{page-component-version}.json',
         {scrollYOffset: '.toolbar'},
         document.getElementById('redoc-container'))
     </script>
