Adding deprecation notice and syncing with changes from rancherlabs reviews
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -25,18 +25,26 @@ https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/observabilit
 endif::[]
 ====
 
-Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version release that introduces new features, enhancements, and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+
+ifeval::["{build-type}" != "community"]
+== What's New - SUSE Rancher Prime v2.13.1
+
+=== Rancher Prime Chart Name
+
+* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
+
+=== Cluster Provisioning - Features and Enhancements
+
+* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the [Cluster Autoscaler Prime documentation](https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html) for more information. See [#49680](https://github.com/rancher/rancher/issues/49680).
+* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the [Alibaba Hosted Cluster Prime documentation](https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html) for more information. See [#50153](https://github.com/rancher/rancher/issues/50153).
+endif::[]
 
 == Rancher General
 
 === Features and Enhancements
 
 * Rancher now supports Kubernetes v1.34. See https://github.com/rancher/rancher/issues/51252[#51252] for information on Rancher support for Kubernetes v1.34. You can view the upstream Kubernetes changelogs for https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md[v1.34] for a complete list of changes.
-
-=== Behavior Changes
-
-* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
-* Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
 
 === Major Bug Fixes
 
@@ -50,11 +58,6 @@ Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version 
 * Introduced support for dynamic content on the Rancher Manager Home screen, allowing timely information, such as product announcements, new releases, feature highlights, and relevant updates to be displayed upon logging in. See https://github.com/rancher/dashboard/issues/15342[#15342].
 * Rancher Default and Prime themes have been refreshed. See https://github.com/rancher/dashboard/issues/15166[#15166].
 * Introduced a Cron Editor component, providing a user interface for defining and managing CronJob schedules. See https://github.com/rancher/dashboard/issues/14341[#14341].
-
-=== Behavior Changes
-
-* The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
-* Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
 
 === Major Bug Fixes
 
@@ -78,14 +81,10 @@ Rancher v2.13.1 is the latest patch release of Rancher. This is a Prime version 
 
 * Rancher now includes initial support for IPv6, providing the foundational capabilities needed to manage clusters using IPv6 addressing. You can deploy Rancher on IPv6-only or dual-stack clusters, and you can provision IPv6-only or dual-stack clusters on Amazon EC2 or DigitalOcean using node drivers, as well as create custom clusters with IPv6 or dual-stack support. See https://github.com/rancher/rancher/issues/49689[#49689].
 * Rancher now uses Rancher Turtles as the default component for providing Cluster API (CAPI) controllers and Custom Resource Definitions (CRDs) necessary for RKE2 and K3s cluster provisioning (v2prov). This change replaces the previous Rancher Provisioning component. Upon upgrade, the Rancher Provisioning chart is automatically uninstalled from the Rancher management cluster and replaced with the Rancher Turtles chart. See https://github.com/rancher/rancher/issues/52254[#52254].
-ifeval::["{build-type}" != "community"]
-* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
-* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
-endif::[]
 
 === Major Bug Fixes
 
-* Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up **Active**. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
+* Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up *Active*. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
 * Fixed an issue where Standard Users assigned the Cluster Owner role on a downstream cluster were unable to view or restore existing etcd snapshots via the Rancher UI. Cluster Owners now have the correct permissions to see and restore snapshots as expected. See https://github.com/rancher/rancher/issues/52307[#52307].
 
 == Rancher Webhook
@@ -233,6 +232,31 @@ endif::[]
 == Rancher Helm Chart Versions
 
 In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm charts are named with a major version that starts with _100_. This avoids simultaneous upstream changes and Rancher changes from causing conflicting version increments. This also complies with semantic versioning (SemVer), which is a requirement for Helm. You can see the upstream version number of a chart in the build metadata, for example: `100.0.0+up2.1.0`. See https://github.com/rancher/rancher/issues/32294[#32294].
+
+== Previous Rancher Behavior Changes
+
+=== Previous Rancher Behavior Changes - Rancher General
+
+* *Rancher v2.13.0:*
+** Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
+
+=== Previous Rancher Behavior Changes - Rancher App (Global UI)
+
+* **Rancher v2.13.0:**
+** The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
+** Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
+
+== Future Rancher Behavior Changes
+
+=== Retention Policy for Rancher App Charts
+
+To improve repository performance Rancher is introducing a lifecycle management policy for charts available in the Apps feature of Rancher, specifically in the "Rancher" repository.
+
+* *The Policy:* Rancher will transition from a cumulative model (retaining all historical versions forever) to a retention model that preserves chart versions for the **seven (7) most recent Rancher minor releases** (approximately a 2.5-year window).
+* *Timeline - Rancher v2.13 & v2.14:* Legacy chart versions (older than the 7-version window) remain available.
+* *Rancher v2.15:* This will be the first version to enforce the policy. Versions falling outside the 7-version window and older than two years will no longer be available.
+
+*Impact:* This change is non-destructive for existing Rancher installations. Historical versions will remain accessible but will not be available in newer release branches once they age out of the 7-version window. You are advised to upgrade your applications before upgrading to Rancher v2.15. Uninstallation after v2.15, and replacement with an updated version, will still be possible.
 
 == Long-standing Known Issues
 
